--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "laravelcollective/html": "^6.1",
+        "livewire/livewire": "^2.9",
         "realrashid/sweet-alert": "^4.0",
         "spatie/laravel-permission": "^3.13",
         "yoeunes/toastr": "^1.2"
